k8s/ext-authz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-authz
  namespace: poc
  labels:
    app: ext-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-authz
  template:
    metadata:
      labels:
        app: ext-authz
    spec:
      containers:
        - name: ext-authz
          image: poc-ext-authz:latest
          imagePullPolicy: Never
          args: ["-opa", "http://opa.poc.svc.cluster.local:8181/v1/data/envoy/authz"]
          ports:
            - containerPort: 9191
---
apiVersion: v1
kind: Service
metadata:
  name: ext-authz
  namespace: poc
spec:
  selector:
    app: ext-authz
  ports:
    - port: 9191
      targetPort: 9191
