k8s/opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  namespace: poc
  labels:
    app: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:latest
          args: ["run", "--server", "--addr", ":8181"]
          ports:
            - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: poc
spec:
  selector:
    app: opa
  ports:
    - port: 8181
      targetPort: 8181
